--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/supertest": "6.0.2",
     "amqplib": "0.10.4",
     "bcryptjs": "2.4.3",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "eslint": "8.57.0",
@@ -43,6 +45,7 @@
     "jest-extended": "4.0.2",
     "jsonwebtoken": "9.0.2",
     "mongodb": "6.7.0",
+    "reflect-metadata": "0.2.2",
     "supertest": "7.0.0",
     "swagger-ui-express": "5.0.1",
     "ts-jest": "29.1.4",
